--- a/apply/apply05.html
+++ b/apply/apply05.html
@@ -18,10 +18,10 @@
 	
 	<!-- Use the main area to add the main content of the webpage -->
 	<main>
-	<img src=".images/beach1.jpg" alt="Beach Day Fun 1">
-	<img src=".images/beach2.jpg" alt="Beach Day Fun 2">
-	<img src="./images/beach3.jpg" alt="Beach Day Fun 3">
-	<img src="./images/beach4.JPG" alt="Beach Day Fun 4">
+	<img src="images/beach1.jpg" alt="Beach Day Fun 1">
+	<img src="images/beach2.jpg" alt="Beach Day Fun 2">
+	<img src="images/beach3.jpg" alt="Beach Day Fun 3">
+	<img src="images/beach4.jpg" alt="Beach Day Fun 4">
 	</main>
 
 	<!-- Use the footer area to add webpage footer content -->
